<resources>
    <string name="app_name">头大的烦恼</string>
    <string name="app_descripe">社科刷题APP，欢迎使用！</string>
    <string name="dati_pattern">答题模式</string>
    <string name="beiti_pattern">看题模式</string>
    <string name="collect">收藏</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="today_done_num">今日刷题/道</string>
    <string name="punch_day_num">已看/天</string>
    <string name="cuoti_xunlian">错题训练</string>
    <string name="collect_xunlian">题目收藏</string>
    <string name="about">关于</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="delete">清除</string>
    <string name="default_choose">全部</string>
    <string name="fljc">思修法律基础</string>
    <string name="mkszy">马克思主义</string>
    <string name="mzdsx">毛概理论</string>
    <string name="sxdd">思修道德基础</string>
    <string name="zgjds">中国近代史</string>
    <string name="remove">移除</string>
    <string name="person_app">个人开发应用</string>
    <string name="person_egg">(有彩蛋哦)</string>
    <string name="person_email">（邮箱地址 13jscheng@stu.edu.cn）</string>
    <string name="download_address">下载地址</string>
    <string name="auto_update">自动更新版本</string>
    <string name="check_update">检查更新</string>
    <string name="click_more">查看更多</string>
    <string name="without_more">没有更多</string>
    <string name="copied_to_board">已复制到剪切板</string>
    <string name="share_to">分享至</string>
    <string name="board">剪切板</string>
    <string name="wechat_friend">微信好友</string>
    <string name="friend_circle">朋友圈</string>
    <string name="about_tips">项目开源，若有其他需求，请与我联系</string>
    <string name="resource_address">https://github.com/ChyengJason/NanCanOlympic</string>\

    <string name="feed_back">意见反馈</string>
    <string name="thanks_for_your_advise">发送成功，谢谢您的反馈！</string>
    <string name="feed_back_content_not_null">反馈内容不为空</string>
    <string name="feed_back_contact">联系方式(QQ/邮箱)：</string>
    <string name="feed_back_input_or_not">选填</string>
    <string name="feed_back_content">反馈内容：</string>
</resources>
