<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/root_view_bg">

    <include layout="@layout/normal_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_setting_item"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/big_margin"
            android:text="@string/auto_update"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/middle_font"/>

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/auto_check_switchButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/big_margin"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/setting_divider_color"/>

    <RelativeLayout
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_setting_item"
        style="@style/selectableItemBackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/big_margin"
            android:text="@string/feed_back"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/middle_font"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/setting_divider_color"/>

    <RelativeLayout
        android:id="@+id/check_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_setting_item"
        style="@style/selectableItemBackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/big_margin"
            android:text="@string/check_update"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/middle_font"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/setting_divider_color"/>

    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_setting_item"
        style="@style/selectableItemBackground">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/big_margin"
            android:text="@string/about"
            android:textColor="?attr/text_color"
            android:textSize="@dimen/middle_font"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/setting_divider_color"/>
</LinearLayout>