<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/share_to"
        android:textColor="?attr/text_color"
        android:textSize="@dimen/middle_font"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_share_hight"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/copyLayout"
            style="@style/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dialog_share_item_padding_bottom"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:padding="@dimen/small_margin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:layout_above="@+id/copyText"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0"
                android:src="@mipmap/share_board"/>

            <TextView
                android:id="@+id/copyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/board"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/middle_font"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/shareFriendLayout"
            style="@style/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dialog_share_item_padding_bottom"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:padding="@dimen/small_margin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:layout_above="@+id/shareFriendText"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0"
                android:src="@mipmap/share_weixin"/>

            <TextView
                android:id="@+id/shareFriendText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wechat_friend"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/middle_font"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/shareCircleLayout"
            style="@style/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dialog_share_item_padding_bottom"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:padding="@dimen/small_margin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/shareCircleText"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="0"
                android:src="@mipmap/share_circle"/>

            <TextView
                android:id="@+id/shareCircleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friend_circle"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/middle_font"/>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>